--- a/templates/header.html
+++ b/templates/header.html
@@ -6,9 +6,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <title>Angela's Blog</title>
+    <meta name="Blog Learning Python" content="" />
+    <meta name="Willy Eth" content="" />
+    <title>Willy Eth Blog</title>
     {% block styles %}
     <!-- Load Bootstrap-Flask CSS here -->
     {{ bootstrap.load_css() }}
